Fix horizontal scrollbar at the edge of medium/small screens

--- a/src/components/SchedulePage/ScheduleItemDetails.css
+++ b/src/components/SchedulePage/ScheduleItemDetails.css
@@ -9,6 +9,7 @@
 
 .ScheduleItemDetails-Content {
   flex: 1;
+  word-break: break-word;
 }
 
 .ScheduleItemDetails-Title {
@@ -36,4 +37,7 @@
 
 .ScheduleItemDetails-Speakers {
   margin-left: var(--spacer-md);
+  &:empty {
+    display: none;
+  }
 }
